--- a/oferta-educativa/derecho.html
+++ b/oferta-educativa/derecho.html
@@ -39,7 +39,7 @@
   <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -87,13 +87,13 @@
           </button>
           <div id="collapse1" class="collapse">
             <ul>
-              <li>Sociología Jurídica</li>
-              <li>Teoría del Estado</li>
-              <li>Metodología de la Investigación</li>
+              <li>Sociolog&iacute;a Jur&iacute;dica</li>
+              <li>Teor&iacute;a del Estado</li>
+              <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
               <li>Fundamentos del Derecho</li>
               <li>Historia del Derecho</li>
               <li>Derecho Romano I</li>
-              <li>Inglés I</li>
+              <li>Ingl&eacute;s I</li>
             </ul>    
           </div>
          </div>
@@ -104,13 +104,13 @@
           </button>
           <div id="collapse2" class="collapse">
             <ul>
-              <li>Metodología Jurídica</li>
-              <li>Teoría de la Comunicación</li>
-              <li>Teoría del Derecho</li>
-              <li>Acto Jurídico y Personal</li>
+              <li>Metodolog&iacute;a Jur&iacute;dica</li>
+              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
+              <li>Teor&iacute;a del Derecho</li>
+              <li>Acto Jur&iacute;dico y Personal</li>
               <li>Derecho Romano II</li>
-              <li>Teoría de la Constitución</li>
-              <li>Inglés II</li>
+              <li>Teor&iacute;a de la Constituci&oacute;n</li>
+              <li>Ingl&eacute;s II</li>
             </ul>
           </div>
          </div>
@@ -122,12 +122,12 @@
           <div id="collapse3" class="collapse">
             <ul>
               <li>Derecho Constitucional</li>
-              <li>Teoría de la Comunicación Oral y Escrita</li>
-              <li>Teoría de la Ley Penal</li>
-              <li>Teoría del Proceso</li>
+              <li>Teor&iacute;a de la Comunicaci&oacute;n Oral y Escrita</li>
+              <li>Teor&iacute;a de la Ley Penal</li>
+              <li>Teor&iacute;a del Proceso</li>
               <li>Derecho Administrativo</li>
               <li>Bienes y Derechos Reales</li>
-              <li>Inglés III</li>
+              <li>Ingl&eacute;s III</li>
             </ul>
           </div>
          </div>
@@ -142,9 +142,9 @@
               <li>Derecho Constitucional</li>
               <li>Obligaciones</li>
               <li>Derecho Administrativo</li>
-              <li>Informática</li>
-              <li>Sistemas Jurídicos</li>
-              <li>Inglés IV</li>
+              <li>Inform&aacute;tica</li>
+              <li>Sistemas Jur&iacute;dicos</li>
+              <li>Ingl&eacute;s IV</li>
             </ul>
           </div>
          </div>
@@ -155,13 +155,13 @@
           </button>
           <div id="collapse5" class="collapse">
             <ul>
-              <li>Garantías Constitucionales</li>
-              <li>Títulos y Operaciones de Crédito</li>
+              <li>Garant&iacute;as Constitucionales</li>
+              <li>T&iacute;tulos y Operaciones de Cr&eacute;dito</li>
               <li>Contratos Civiles</li>
               <li>Derecho Laboral</li>
-              <li>Derecho Internacional Público</li>
+              <li>Derecho Internacional P&uacute;blico</li>
               <li>Derecho Procesal Civil</li>
-              <li>Inglés V</li>
+              <li>Ingl&eacute;s V</li>
             </ul>
           </div>
          </div>
@@ -175,9 +175,9 @@
               <li>Derecho Procesal Penal</li>
               <li>Estado y Sociedad</li>
               <li>Familia y Sucesiones</li>
-              <li>Derecho Bancario y Bursátil</li>
+              <li>Derecho Bancario y Burs&aacute;til</li>
               <li>Derecho Agrario</li>
-              <li>Legislación Fiscal I</li>
+              <li>Legislaci&oacute;n Fiscal I</li>
               <li>Derecho Comercial Internacional</li>
             </ul>
           </div>
@@ -189,10 +189,10 @@
             <div id="collapse7" class="collapse">
               <ul>
                 <li>Sociedad del Tercer Milenio</li>
-                <li>Legislación Fiscal II</li>
-                <li>Tópicos de Derecho Mercantil</li>
+                <li>Legislaci&oacute;n Fiscal II</li>
+                <li>T&oacute;picos de Derecho Mercantil</li>
                 <li>Derecho Internacional Privado</li>
-                <li>Derecho Económico</li>
+                <li>Derecho Econ&oacute;mico</li>
                 <li>Derecho Laboral Internacional</li>
                 <li>Amparo</li>
                 <li>Derecho Ambiental</li>
@@ -206,13 +206,13 @@
             </button>
             <div id="collapse8" class="collapse">
               <ul>
-                <li>Seminario de Investigación I</li>
+                <li>Seminario de Investigaci&oacute;n I</li>
                 <li>Derecho Electoral</li>
-                <li>Tópicos de Derecho Mercantil</li>
+                <li>T&oacute;picos de Derecho Mercantil</li>
                 <li>Derecho Internacional Privado II</li>
-                <li>Legislación Aduanera</li>
+                <li>Legislaci&oacute;n Aduanera</li>
                 <li>Derecho Comparado</li>
-                <li>Derecho Burocrático</li>
+                <li>Derecho Burocr&aacute;tico</li>
               </ul>
             </div>
            </div>
@@ -223,12 +223,12 @@
             </button>
             <div id="collapse9" class="collapse">
               <ul>
-                <li>Seminario de Investigación II</li>
-                <li>Valores en la Profesión</li>
-                <li>Filosofía del Derecho</li>
+                <li>Seminario de Investigaci&oacute;n II</li>
+                <li>Valores en la Profesi&oacute;n</li>
+                <li>Filosof&iacute;a del Derecho</li>
                 <li>Seguridad Social</li>
                 <li>Propiedad Intelectual</li>
-                <li>Temas Selectos de la Legislación de Nuevo León</li>
+                <li>Temas Selectos de la Legislaci&oacute;n de Nuevo Le&oacute;n</li>
                 <li>Derecho Empresarial</li>
               </ul>
             </div>
@@ -259,16 +259,7 @@
     <div class="container d-md-flex py-4">
 
       <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Tempo</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
