--- a/oferta-educativa/lae.html
+++ b/oferta-educativa/lae.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Preparatoria | Colegio Superior de Ciencias Valle de Casta&ntilde;o</title>
+  <title>Licenciatura en Administraci&oacute;n de Empresas | Colegio Superior de Ciencias Valle de Casta&ntilde;o</title>
   <link rel="alternate" type="application/rss+xml" title="Colegio Superior de Ciencias Valle de Castaño &raquo; Feed" href="https://www.valledecastano.edu.mx/feed/"/>
   <link rel="alternate" type="application/rss+xml" title="Colegio Superior de Ciencias Valle de Castaño &raquo; Feed de los comentarios" />
   <link rel="canonical" href="https://www.valledecastano.edu.mx/"/>
@@ -39,7 +39,7 @@
   <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,11 +52,11 @@
 
   <main id="main" class="main-inner-pages">
 
-    <section class="cta preparatoria">
+    <section class="cta licenciatura">
       <div class="container">
 
         <div class="text-left">
-          <h1>Preparatoria</h1>
+          <h1>Licenciatura en Administraci&oacute;n de Empresas</h1>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
         </div>
 
@@ -86,15 +86,21 @@
             Primer Tetramestre
           </button>
           <div id="collapse1" class="collapse">
-            <ul >
-              <li>Matem&aacute;ticas I</li>
-              <li>Química I</li>
-              <li>Ética y Valores I</li>
-              <li>Introducci&oacute;n a las Ciencias Sociales</li>
-              <li>Taller de Lectura y Redacci&oacute;n I</li>
-              <li>Lengua Adicional al Espa&ntilde;ol I</li>
-              <li>Inform&aacute;tica I</li>
-            </ul>
+            <ul>
+              <li>Sociolog&iacute;a Jur&iacute;dica</li>
+              <li>Teor&iacute;a del Estado</li>
+              <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
+              <li>Fundamentos del Derecho</li>
+              <li>Historia del Derecho</li>
+              <li>Derecho Romano I</li>
+              <li>Ingl&eacute;s I</li>
+              Empresa y Contexto Mundial
+Inglés I
+Contabilidad General
+Administración I
+Matemáticas I
+Metodología de la Investigación
+            </ul>    
           </div>
          </div>
          
@@ -104,13 +110,19 @@
           </button>
           <div id="collapse2" class="collapse">
             <ul>
-              <li>Matem&aacute;ticas II</li>
-              <li>Química II</li>
-              <li>Ética y Valores II</li>
-              <li>Historia de M&eacute;xico I</li>
-              <li>Taller de Lectura y Redacci&oacute;n II</li>
-              <li>Lengua Adicional al Espa&ntilde;ol II</li>
-              <li>Inform&aacute;tica II</li>
+              <li>Metodolog&iacute;a Jur&iacute;dica</li>
+              <li>Teor&iacute;a de la Comunicaci&oacute;n</li>
+              <li>Teor&iacute;a del Derecho</li>
+              <li>Acto Jur&iacute;dico y Personal</li>
+              <li>Derecho Romano II</li>
+              <li>Teor&iacute;a de la Constituci&oacute;n</li>
+              <li>Ingl&eacute;s II</li>
+              Microeconomía
+Inglés II
+Teoría de la Comunicación
+Contabilidad Administrativa
+Administración II
+Matemáticas II
             </ul>
           </div>
          </div>
@@ -121,14 +133,19 @@
           </button>
           <div id="collapse3" class="collapse">
             <ul>
-              <li>Matem&aacute;ticas III</li>
-              <li>Biolog&iacute;a I</li>
-              <li>F&iacute;sica I</li>
-              <li>Historia de M&eacute;xico II</li>
-              <li>Literatura I</li>
-              <li>Lengua Adicional al Espa&ntilde;ol III</li>
-              <li>Contabilidad</li>
-              <li>Inform&aacute;tica III</li>
+              <li>Derecho Constitucional</li>
+              <li>Teor&iacute;a de la Comunicaci&oacute;n Oral y Escrita</li>
+              <li>Teor&iacute;a de la Ley Penal</li>
+              <li>Teor&iacute;a del Proceso</li>
+              <li>Derecho Administrativo</li>
+              <li>Bienes y Derechos Reales</li>
+              <li>Ingl&eacute;s III</li>
+              Inglés III
+Contabilidad Financiera
+Taller de Comunicación Oral y Escrita
+Fundamentos de Derecho
+Toma de Decisiones no Programadas
+Macroeconomía
             </ul>
           </div>
          </div>
@@ -139,14 +156,19 @@
           </button>
           <div id="collapse4" class="collapse">
             <ul>
-              <li>Matem&aacute;ticas IV</li>
-              <li>Biolog&iacute;a II</li>
-              <li>F&iacute;sica II</li>
-              <li>Estructuras Socioecon&oacute;micas de M&eacute;xico</li>
-              <li>Literatura II</li>
-              <li>Lengua Adicional al Espa&ntilde;ol IV</li>
-              <li>Introducci&oacute;n a la Administraci&oacute;n</li>
-              <li>Comunicaci&oacute;n</li>
+              <li>Derecho Mercantil</li>
+              <li>Derecho Constitucional</li>
+              <li>Obligaciones</li>
+              <li>Derecho Administrativo</li>
+              <li>Inform&aacute;tica</li>
+              <li>Sistemas Jur&iacute;dicos</li>
+              <li>Ingl&eacute;s IV</li>
+              Informática
+Desarrollo Organizacional
+Inglés IV
+Sistemas de Calidad
+Estadística I
+Derecho Mercantil
             </ul>
           </div>
          </div>
@@ -157,14 +179,19 @@
           </button>
           <div id="collapse5" class="collapse">
             <ul>
-              <li>Geograf&iacute;a</li>
-              <li>Historia Universal Contempor&aacute;nea</li>
-              <li>Administraci&oacute;n I</li>
-              <li>Ciencias de la Comunicaci&oacute;n I</li>
-              <li>Psicolog&iacute;a I</li>
-              <li>Derecho I</li>
-              <li>Dise&ntilde;o</li>
-              <li>Desarrollo Comunitario</li>
+              <li>Garant&iacute;as Constitucionales</li>
+              <li>T&iacute;tulos y Operaciones de Cr&eacute;dito</li>
+              <li>Contratos Civiles</li>
+              <li>Derecho Laboral</li>
+              <li>Derecho Internacional P&uacute;blico</li>
+              <li>Derecho Procesal Civil</li>
+              <li>Ingl&eacute;s V</li>
+              Contabilidad de Costos
+Principios de Presupuestos
+Derecho Laboral
+Organización Empresarial
+Finanzas
+Inglés V
             </ul>
           </div>
          </div>
@@ -175,18 +202,91 @@
           </button>
           <div id="collapse6" class="collapse">
             <ul>
-              <li>Filosof&iacute;a</li>
-              <li>Ecolog&iacute;a y Medio Ambiente</li>
-              <li>Metodolog&iacute;a de la Investigaci&oacute;n</li>
-              <li>Administraci&oacute;n II</li>
-              <li>Ciencias de la Comunicaci&oacute;n II</li>
-              <li>Psicolog&iacute;a II</li>
-              <li>Derecho II</li>
-              <li>Higiene y Salud Comunitaria</li>
-              <li>Traductor de Ingl&eacute;s</li>
+              <li>Derecho Procesal Penal</li>
+              <li>Estado y Sociedad</li>
+              <li>Familia y Sucesiones</li>
+              <li>Derecho Bancario y Burs&aacute;til</li>
+              <li>Derecho Agrario</li>
+              <li>Legislaci&oacute;n Fiscal I</li>
+              <li>Derecho Comercial Internacional</li>
+              Administración de Recursos Humanos
+Finanzas Nacionales
+Políticas Arancelarias
+Relaciones Empresariales
+Investigación de Mercados
+Derecho Fiscal
             </ul>
           </div>
          </div>
+         <div class="col-12 col-lg-4">
+            <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapse7" aria-expanded="false">
+              S&eacute;ptimo Tetramestre
+            </button>
+            <div id="collapse7" class="collapse">
+              <ul>
+                <li>Sociedad del Tercer Milenio</li>
+                <li>Legislaci&oacute;n Fiscal II</li>
+                <li>T&oacute;picos de Derecho Mercantil</li>
+                <li>Derecho Internacional Privado</li>
+                <li>Derecho Econ&oacute;mico</li>
+                <li>Derecho Laboral Internacional</li>
+                <li>Amparo</li>
+                <li>Derecho Ambiental</li>
+                Finanzas Internacionales
+Administración de Empresas
+Microempresas
+Perspectiva Humanística
+Desarrollo de Proyectos
+Liderazgo Empresarial
+              </ul>
+            </div>
+           </div>
+
+           <div class="col-12 col-lg-4">
+            <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="false">
+              Octavo Tetramestre
+            </button>
+            <div id="collapse8" class="collapse">
+              <ul>
+                <li>Seminario de Investigaci&oacute;n I</li>
+                <li>Derecho Electoral</li>
+                <li>T&oacute;picos de Derecho Mercantil</li>
+                <li>Derecho Internacional Privado II</li>
+                <li>Legislaci&oacute;n Aduanera</li>
+                <li>Derecho Comparado</li>
+                <li>Derecho Burocr&aacute;tico</li>
+                Administración de Proyectos
+Seminario de Investigación I
+Internet y Comercio
+Soluciones Integrales Financieras
+Auditoría
+Mercadotecnia
+              </ul>
+            </div>
+           </div>
+
+           <div class="col-12 col-lg-4">
+            <button class="btn btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#collapse9" aria-expanded="false">
+              Noveno Tetramestre
+            </button>
+            <div id="collapse9" class="collapse">
+              <ul>
+                <li>Seminario de Investigaci&oacute;n II</li>
+                <li>Valores en la Profesi&oacute;n</li>
+                <li>Filosof&iacute;a del Derecho</li>
+                <li>Seguridad Social</li>
+                <li>Propiedad Intelectual</li>
+                <li>Temas Selectos de la Legislaci&oacute;n de Nuevo Le&oacute;n</li>
+                <li>Derecho Empresarial</li>
+                Seminario de Investigación II
+Consultoría Empresarial
+Valores en la Profesión
+Psicología Industrial
+Seguridad Social
+Evaluación de Proyectos
+              </ul>
+            </div>
+           </div>
 
          <div class="col-12">
           <h2>Requisitos</h2>
@@ -213,16 +313,7 @@
     <div class="container d-md-flex py-4">
 
       <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Tempo</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        <p>Colegio Superior de Ciencias Valle de Casta&ntilde;o</p>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
